Fetch data <Chart> and install chart lib and disply the data>

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,4 +7,6 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    /* put the chart below the <Card> */
+    flex-direction: column;
 }
