Update the bar chart and CountryPicker -> Complete App

--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -22,3 +22,10 @@
 .deaths{
   border-bottom: 10px solid rgba(255, 0, 0, 0.5);
 }
+
+/* tablet and mobile device */
+@media (max-width:770px){
+  .card{
+    margin: 2% 0 !important;
+  }
+}
