--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,3 +10,19 @@ body{
     /* put the chart below the <Card> */
     flex-direction: column;
 }
+
+.image{
+    width: 370px;
+    margin-top: 30px;
+}
+
+/* tablet and mobile device */
+@media (max-width:770px){
+    .container{
+        margin: 0 10%;
+    }
+
+    .image{
+        width: 100%;
+    }
+}
